위치 선택 화면 만듬 ㅋ

--- a/app/src/main/res/layout/activity_location_editor.xml
+++ b/app/src/main/res/layout/activity_location_editor.xml
@@ -3,8 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.softmarshmallow.foodle.Views.LocationEditor.LocationEditorActivity">
+
+    <com.softmarshmallow.foodle.CustomViews.NonSwipeableViewPager.NonSwipeableViewPager
+        android:id="@+id/nonSwipeableViewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </android.support.constraint.ConstraintLayout>
