--- a/app/src/main/res/layout/activity_sms_verification_phone_number_enter_view.xml
+++ b/app/src/main/res/layout/activity_sms_verification_phone_number_enter_view.xml
@@ -59,7 +59,7 @@
 
 
         <TextView
-            android:id="@+id/PinCodeTitleTextView"
+            android:id="@+id/titleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="핸드폰 번호"
@@ -70,12 +70,12 @@
         <LinearLayout
             android:id="@+id/linearLayout10"
             android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_height="53dp"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/PinCodeTitleTextView">
+            app:layout_constraintTop_toBottomOf="@+id/titleText">
 
             <RelativeLayout
                 android:id="@+id/dialCodeChooserContainer"
@@ -85,24 +85,24 @@
                 tools:layout_editor_absoluteY="271dp">
 
                 <!--<ImageView-->
-                    <!--android:id="@+id/dialCodeBackgroundImageView"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="match_parent"-->
-                    <!--app:srcCompat="@drawable/dialog_background"-->
-                    <!--tools:layout_editor_absoluteX="25dp"-->
-                    <!--tools:layout_editor_absoluteY="263dp"/>-->
+                <!--android:id="@+id/dialCodeBackgroundImageView"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--app:srcCompat="@drawable/dialog_background"-->
+                <!--tools:layout_editor_absoluteX="25dp"-->
+                <!--tools:layout_editor_absoluteY="263dp"/>-->
 
                 <!--<TextView-->
-                    <!--android:id="@+id/dialCodeTextView"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="match_parent"-->
-                    <!--android:layout_alignParentEnd="true"-->
-                    <!--android:layout_alignParentRight="true"-->
-                    <!--android:layout_centerVertical="true"-->
-                    <!--android:gravity="center"-->
-                    <!--android:text="+1"-->
-                    <!--android:textColor="@color/colorIdentity"-->
-                    <!--android:textSize="12sp"/>-->
+                <!--android:id="@+id/dialCodeTextView"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_alignParentEnd="true"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:gravity="center"-->
+                <!--android:text="+1"-->
+                <!--android:textColor="@color/colorIdentity"-->
+                <!--android:textSize="12sp"/>-->
                 <Spinner
                     android:id="@+id/prefix_sp"
                     android:layout_width="wrap_content"
