--- a/app/src/main/res/layout/activity_sms_verification_pin_code_enter_view.xml
+++ b/app/src/main/res/layout/activity_sms_verification_pin_code_enter_view.xml
@@ -59,7 +59,7 @@
 
 
         <TextView
-            android:id="@+id/PinCodeTitleTextView"
+            android:id="@+id/titleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="4자리 핀번호"
@@ -75,7 +75,7 @@
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/PinCodeTitleTextView">
+            app:layout_constraintTop_toBottomOf="@+id/titleText">
 
             <EditText
                 android:id="@+id/PinCodeEditText"
