--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -37,6 +37,18 @@
 
             </FrameLayout>
 
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/text_input_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/editText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="UserName"/>
+            </android.support.design.widget.TextInputLayout>
+
             <LinearLayout
                 android:tag="sticky"
                 android:layout_width="match_parent"
@@ -88,12 +100,12 @@
 
 
                 <TextView
-                    android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="You might like"
-                    android:textSize="19.3sp"
-                    android:textColor="#373737"/>
+                    android:layout_weight="1"
+                    android:text="You might like 한글"
+                    android:textAppearance="@style/TextAppearance.Large"
+                    />
 
                 <TextView
                     android:layout_width="wrap_content"
