--- a/app/src/main/res/drawable/round_shape_button.xml
+++ b/app/src/main/res/drawable/round_shape_button.xml
@@ -4,16 +4,8 @@
 	android:shape="rectangle"
 	android:padding="10dp">
 	<solid
-		android:color="#6E6E6E" />
+		android:color="@color/colorPrimaryDark" />
 	<!-- this one is ths color of the Rounded Button -->
 	<corners
-		android:bottomRightRadius="10dp"
-		android:bottomLeftRadius="10dp"
-		android:topLeftRadius="10dp"
-		android:topRightRadius="10dp" />
-	<padding
-		android:bottom="5dp"
-		android:left="10dp"
-		android:right="10dp"
-		android:top="5dp" />
+		android:radius="22dp" />
 </shape>
