--- a/app/src/main/res/layout/activity_store_basic_forms.xml
+++ b/app/src/main/res/layout/activity_store_basic_forms.xml
@@ -7,71 +7,111 @@
     android:layout_height="match_parent"
     tools:context="com.softmarshmallow.foodle.Views.StoreEditorV3.StoreBasicInfoFormsPage.StoreBasicFormsActivity">
 
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/descriptionTextView2"
-        android:layout_width="270dp"
+        <android.support.constraint.ConstraintLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+
+            <TextView
+                android:id="@+id/descriptionTextView2"
+                android:layout_width="270dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="16dp"
+                android:lines="2"
+                android:maxLines="2"
+                android:text="어떤 푸드트럭을\n운영하시나요?"
+                android:textAppearance="@style/TextAppearance.Large"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/exitButton"/>
+
+            <ImageButton
+                android:id="@+id/exitButton"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="24dp"
+                android:adjustViewBounds="true"
+                android:background="#00000000"
+                android:scaleType="fitXY"
+                android:tint="@color/colorLightDark"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_x"/>
+
+            <LinearLayout
+                android:id="@+id/linearLayout11"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="32dp"
+                android:orientation="vertical"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/descriptionTextView2">
+
+                <com.softmarshmallow.foodle.CustomViews.DefaultEditTextContainerView.DefaultEditTextContainerView
+                    android:id="@+id/storeNameEditTextContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:hintText="예) 모모네 타코야끼"
+                    app:titleText="푸드트럭 이름"/>
+
+
+                <com.softmarshmallow.foodle.CustomViews.DefaultEditTextContainerView.DefaultEditTextContainerView
+                    android:id="@+id/storeShortPromotionEditTextContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:hintText="예) 10년 경력의 모모가 운영하는\n 월드클래스 타코야끼!"
+                    app:titleText="푸드트럭 한줄 프로모션"/>
+
+
+                <com.softmarshmallow.foodle.CustomViews.DefaultEditTextContainerView.DefaultEditTextContainerView
+                    android:id="@+id/storeLongDescriptionEditTextContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:hintText="예) 모모네 타코야끼는 2004년 부산에서\n 시작하여 전국 12개 지사를 두고있는…"
+                    app:titleText="푸드트럭 상세설명"/>
+
+
+                <com.softmarshmallow.foodle.CustomViews.DefaultEditTextContainerView.DefaultEditTextContainerView
+                    android:id="@+id/storeTagEditTextContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:hintText="예)#타코야끼 #맜잇다 #홍대 #데이트코스 #동글동글"
+                    app:titleText="푸드트럭 태그"/>
+
+
+            </LinearLayout>
+
+        </android.support.constraint.ConstraintLayout>
+    </ScrollView>
+
+    <Button
+        android:id="@+id/nextButton"
+        android:layout_width="112dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:lines="2"
-        android:maxLines="2"
-        android:text="어떤 푸드트럭을\n운영하시나요?"
-        android:textAppearance="@style/TextAppearance.Large"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/exitButton"/>
-
-    <ImageButton
-        android:id="@+id/exitButton"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:adjustViewBounds="true"
-        android:background="#00000000"
-        android:scaleType="fitXY"
-        android:tint="@color/colorLightDark"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_x"/>
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="319dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="32dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView2">
-
-        <com.softmarshmallow.foodle.CustomViews.DefaultEditTextContainerView.DefaultEditTextContainerView
-            android:id="@+id/storeNameEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:hintText="예) 모모네 타코야끼"
-            app:titleText="푸드트럭 이름"/>
-
-
-        <com.softmarshmallow.foodle.CustomViews.DefaultEditTextContainerView.DefaultEditTextContainerView
-            android:id="@+id/storeShortPromotionEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:hintText="예) 10년 경력의 모모가 운영하는 월드클래스 타코야끼!"
-            app:titleText="푸드트럭 한줄 프로모션"/>
-
-
-        <com.softmarshmallow.foodle.CustomViews.DefaultEditTextContainerView.DefaultEditTextContainerView
-            android:id="@+id/storeLongDescriptionEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:hintText="예) 모모네 타코야끼는 2004년 부산에서 시작하여 전국 12개 지사를 두고있는…"
-            app:titleText="푸드트럭 상세설명"/>
-
-    </LinearLayout>
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/round_shape_button"
+        android:enabled="true"
+        android:text="다음"
+        android:textColor="@color/textWhite"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
