--- a/app/src/main/res/layout/activity_store_editor_landing_page.xml
+++ b/app/src/main/res/layout/activity_store_editor_landing_page.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ScrollView
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,95 +7,137 @@
     android:layout_height="match_parent"
     tools:context="com.softmarshmallow.foodle.Views.StoreEditorV3.StoreEditorLandingPage.StoreEditorLandingPageActivity">
 
-
-    <android.support.constraint.ConstraintLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
-
-            <com.softmarshmallow.foodle.Views.StoreEditorV3.CustomViews.LandingPageSectionItemView
-                android:id="@+id/section_basic_forms"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:descriptionText="푸드트럭의 이름 설명 태그 연락처등을 입력합니다"
-                app:titleText="기본정보부터 시작하죠"/>
-
-            <com.softmarshmallow.foodle.Views.StoreEditorV3.CustomViews.LandingPageSectionItemView
-                android:id="@+id/section_location"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:descriptionText="현제 푸드트럭의 위치를 알려주세요, 앞으로도 이곳에서 업데이트 할수있습니다."
-                app:titleText="위치를 알려주세요"/>
-
-
-            <com.softmarshmallow.foodle.Views.StoreEditorV3.CustomViews.LandingPageSectionItemView
-                android:id="@+id/section_photos"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:descriptionText="당신의 푸드트럭을 잘 나타내는 사진과 설명을 입력하게됩니다."
-                app:titleText="비쥬얼을 추가합시다"/>
-
-            <com.softmarshmallow.foodle.Views.StoreEditorV3.CustomViews.LandingPageSectionItemView
-                android:id="@+id/section_menus"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:descriptionText="메뉴의 이름, 가격, 사진등을 입력하게 됩니다."
-                app:titleText="메뉴를 알려주세요"/>
-
-        </LinearLayout>
 
         <android.support.constraint.ConstraintLayout
-            android:id="@+id/constraintLayout2"
-            android:layout_width="0dp"
-            android:layout_height="155dp"
-            android:background="@color/primary_dark"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
 
-            <ImageButton
-                android:id="@+id/exitButton"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
-                android:layout_marginStart="26dp"
-                android:layout_marginTop="16dp"
-                android:adjustViewBounds="true"
-                android:background="#00000000"
-                android:scaleType="fitXY"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_x"/>
-
-            <TextView
-                android:id="@+id/descriptionTextView"
-                android:layout_width="270dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
-                android:layout_marginStart="26dp"
-                android:layout_marginTop="16dp"
-                android:lines="2"
-                android:maxLines="2"
-                android:text="당신의 멋진 푸드트럭을 공개해 주세요"
-                android:textColor="@color/textWhite"
-                android:textSize="26sp"
-                android:textStyle="bold"
+                android:orientation="vertical"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
+
+                <com.softmarshmallow.foodle.Views.StoreEditorV3.CustomViews.LandingPageSectionItemView
+                    android:id="@+id/section_basic_forms"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:descriptionText="푸드트럭의 이름 설명 태그 연락처등을 입력합니다"
+                    app:titleText="기본정보부터 시작하죠"/>
+
+                <com.softmarshmallow.foodle.Views.StoreEditorV3.CustomViews.LandingPageSectionItemView
+                    android:id="@+id/section_location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:descriptionText="현제 푸드트럭의 위치를 알려주세요, 앞으로도 이곳에서 업데이트 할수있습니다."
+                    app:titleText="위치를 알려주세요"/>
+
+
+                <com.softmarshmallow.foodle.Views.StoreEditorV3.CustomViews.LandingPageSectionItemView
+                    android:id="@+id/section_photos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:descriptionText="당신의 푸드트럭을 잘 나타내는 사진과 설명을 입력하게됩니다."
+                    app:titleText="비쥬얼을 추가합시다"/>
+
+                <com.softmarshmallow.foodle.Views.StoreEditorV3.CustomViews.LandingPageSectionItemView
+                    android:id="@+id/section_menus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:descriptionText="메뉴의 이름, 가격, 사진등을 입력하게 됩니다."
+                    app:titleText="메뉴를 알려주세요"/>
+
+            </LinearLayout>
+
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/constraintLayout2"
+                android:layout_width="0dp"
+                android:layout_height="155dp"
+                android:background="@color/primary_dark"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/exitButton"/>
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageButton
+                    android:id="@+id/exitButton"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:layout_marginStart="26dp"
+                    android:layout_marginTop="16dp"
+                    android:adjustViewBounds="true"
+                    android:background="#00000000"
+                    android:scaleType="fitXY"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/ic_x"/>
+
+                <TextView
+                    android:id="@+id/descriptionTextView"
+                    android:layout_width="270dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="24dp"
+                    android:layout_marginStart="26dp"
+                    android:layout_marginTop="16dp"
+                    android:lines="2"
+                    android:maxLines="2"
+                    android:text="당신의 멋진 푸드트럭을 공개해 주세요"
+                    android:textColor="@color/textWhite"
+                    android:textSize="26sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/exitButton"/>
+            </android.support.constraint.ConstraintLayout>
+
+
         </android.support.constraint.ConstraintLayout>
+
+    </ScrollView>
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <View
+            android:id="@+id/view7"
+            style="@style/Divider"/>
+
+
+        <mehdi.sakout.fancybuttons.FancyButton
+            android:id="@+id/previewButton"
+            android:layout_width="112dp"
+            android:layout_height="48dp"
+            android:layout_marginBottom="6dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="5dp"
+            app:fb_borderColor="@color/colorPrimaryDark"
+            app:fb_borderWidth="4dp"
+            app:fb_defaultColor="#0000"
+            app:fb_focusColor="@color/colorPrimaryDark"
+            app:fb_radius="22dp"
+            app:fb_text="미리 보기"
+            app:fb_textColor="@color/colorPrimaryDark"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view7"/>
 
 
     </android.support.constraint.ConstraintLayout>
-
-</ScrollView>
-
+</android.support.constraint.ConstraintLayout>
