--- a/app/src/main/res/layout/fragment_address_forms.xml
+++ b/app/src/main/res/layout/fragment_address_forms.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/exitButton"
                 android:layout_width="18dp"
                 android:layout_height="18dp"
-                android:layout_marginStart="26dp"
+                android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
                 android:adjustViewBounds="true"
                 android:background="#00000000"
@@ -39,7 +39,7 @@
                 android:layout_width="270dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="24dp"
-                android:layout_marginStart="26dp"
+                android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
                 android:lines="2"
                 android:maxLines="2"
@@ -52,6 +52,37 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/exitButton"/>
         </android.support.constraint.ConstraintLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="24dp"
+            android:layout_marginStart="24dp"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
+
+            <com.softmarshmallow.foodle.CustomViews.DefaultEditTextContainerView.DefaultEditTextContainerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:hintText="South Korea"
+                app:titleText="나라"/>
+
+
+            <com.softmarshmallow.foodle.CustomViews.DefaultEditTextContainerView.DefaultEditTextContainerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:hintText="예)판교원로 186"
+                app:titleText="도로"/>
+
+
+            <com.softmarshmallow.foodle.CustomViews.DefaultEditTextContainerView.DefaultEditTextContainerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:hintText="예)판교역 1번출구앞 조각상 옆"
+                app:titleText="위치 설명"/>
+        </LinearLayout>
 
         <mehdi.sakout.fancybuttons.FancyButton
             android:id="@+id/nextButton"
@@ -68,26 +99,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
 
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="0dp"
-            android:layout_height="95dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
-
-            <TextView
-                android:id="@+id/textView10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="도로"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
-        </android.support.constraint.ConstraintLayout>
     </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
