--- a/app/src/main/res/layout/activity_photo_selector_view.xml
+++ b/app/src/main/res/layout/activity_photo_selector_view.xml
@@ -6,16 +6,16 @@
     android:layout_height="match_parent"
     tools:context="com.softmarshmallow.foodle.Views.PhotoSelectorView.PhotoSelectorActivity"
     android:layout_gravity="center">
+
     <ImageView
         android:id="@+id/exitButton"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
         android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_left_arrow"
-        android:layout_marginLeft="24dp"/>
+        app:srcCompat="@drawable/ic_left_arrow" />
 
     <com.woxthebox.draglistview.BoardView
         android:id="@+id/board_view"
@@ -23,6 +23,7 @@
         android:layout_height="300dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
+        android:fillViewport="false"
         android:foregroundGravity="center"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -42,5 +43,14 @@
         app:fb_textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
+
+    <ImageButton
+        android:id="@+id/PhotoSelecterUpload"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_margin="24dp"
+        android:tint="@color/md_red_100"
+
+        app:srcCompat="@drawable/plus" />
 
 </android.support.constraint.ConstraintLayout>
