--- a/app/src/main/res/layout/column_item.xml
+++ b/app/src/main/res/layout/column_item.xml
@@ -13,22 +13,12 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/item_layout"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:paddingBottom="2dp"
-    android:paddingLeft="6dp"
-    android:paddingRight="6dp"
-    android:paddingTop="2dp"
-    card_view:layout_anchorGravity="center">
-
     <android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:duplicateParentState="true"
         card_view:cardBackgroundColor="#ffffff"
@@ -39,8 +29,8 @@
         android:layout_margin="20dp">
 
         <ImageView
-            android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_marginRight="12dp"
             android:cropToPadding="false"
             android:id="@+id/ImageSelecterImage"
@@ -54,4 +44,3 @@
             android:textSize="16sp" />
 
     </android.support.v7.widget.CardView>
-</FrameLayout>
