MAKE NEW PHOTOSELECTOR NOT DELETE BEFORE THING

--- a/app/src/main/res/layout/view_default_edit_text_container_view.xml
+++ b/app/src/main/res/layout/view_default_edit_text_container_view.xml
@@ -60,7 +60,8 @@
         android:tint="@color/colorLight"
         app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="@+id/contentEditText"
-        app:layout_constraintTop_toTopOf="@+id/contentEditText"
-        app:srcCompat="@drawable/oval"/>
+        app:layout_constraintTop_toTopOf="@+id/contentEditText"/>
+        <!--app:srcCompat="@drawable/oval"-->
+
 
 </android.support.constraint.ConstraintLayout>
