--- a/app/src/main/res/layout/list_item_minimal.xml
+++ b/app/src/main/res/layout/list_item_minimal.xml
@@ -11,5 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"/>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/ImageSelecterImage"
+        android:src="@drawable/menu"/>
 
 </FrameLayout>
