--- a/app/src/main/res/layout/activity_menu_editor_landing_page.xml
+++ b/app/src/main/res/layout/activity_menu_editor_landing_page.xml
@@ -1,10 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.softmarshmallow.foodle.Views.MenuEditorV3.MenuEditorLandingPage.MenuEditorLandingPageActivity">
+    <android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="com.softmarshmallow.foodle.Views.MenuEditorV3.MenuEditorLandingPage.MenuEditorLandingPageActivity">
 
-</android.support.constraint.ConstraintLayout>
+        <ScrollView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
+
+                    <com.softmarshmallow.foodle.Views.StoreEditorV3.CustomViews.LandingPageSectionItemView
+                        android:id="@+id/section_basic_forms"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:descriptionText="메뉴의 이름, 가격, 설명, 원산지 정보, 태그 등을 등록합니다."
+                        app:titleText="메뉴 기본정보"/>
+
+                    <com.softmarshmallow.foodle.Views.StoreEditorV3.CustomViews.LandingPageSectionItemView
+                        android:id="@+id/section_location"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:descriptionText="메뉴를 잘 표현하는 사진을 등록해주세요."
+                        app:titleText="미각을 시각화합니다"/>
+
+
+                    <com.softmarshmallow.foodle.Views.StoreEditorV3.CustomViews.LandingPageSectionItemView
+                        android:id="@+id/section_photos"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:descriptionText="당신의 푸드트럭을 잘 나타내는 사진과 설명을 입력하게됩니다."
+                        app:titleText="비쥬얼을 추가합시다"/>
+
+                    <com.softmarshmallow.foodle.Views.StoreEditorV3.CustomViews.LandingPageSectionItemView
+                        android:id="@+id/section_menus"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:descriptionText="메뉴의 사이즈, 추가 제료, 카테고리등을 설정합니다."
+                        app:titleText="추가 옵션"/>
+
+                </LinearLayout>
+
+                <android.support.constraint.ConstraintLayout
+                    android:id="@+id/constraintLayout2"
+                    android:layout_width="0dp"
+                    android:layout_height="155dp"
+                    android:background="@color/primary_dark"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <ImageButton
+                        android:id="@+id/exitButton"
+                        android:layout_width="18dp"
+                        android:layout_height="18dp"
+                        android:layout_marginStart="26dp"
+                        android:layout_marginTop="16dp"
+                        android:adjustViewBounds="true"
+                        android:background="#00000000"
+                        android:scaleType="fitXY"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/ic_x"/>
+
+                    <TextView
+                        android:id="@+id/descriptionTextView"
+                        android:layout_width="270dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="24dp"
+                        android:layout_marginStart="26dp"
+                        android:layout_marginTop="16dp"
+                        android:lines="2"
+                        android:maxLines="2"
+                        android:text="여러분의 음식을 세상에 알려주세요"
+                        android:textColor="@color/textWhite"
+                        android:textSize="26sp"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/exitButton"/>
+                </android.support.constraint.ConstraintLayout>
+
+
+            </android.support.constraint.ConstraintLayout>
+
+        </ScrollView>
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/constraintLayout3"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:background="@color/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <View
+                android:id="@+id/view7"
+                style="@style/Divider"/>
+
+
+            <mehdi.sakout.fancybuttons.FancyButton
+                android:id="@+id/previewButton"
+                android:layout_width="112dp"
+                android:layout_height="48dp"
+                android:layout_marginBottom="6dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="5dp"
+                app:fb_borderColor="@color/colorPrimaryDark"
+                app:fb_borderWidth="4dp"
+                app:fb_defaultColor="#0000"
+                app:fb_focusColor="@color/colorPrimaryDark"
+                app:fb_radius="22dp"
+                app:fb_text="미리 보기"
+                app:fb_textColor="@color/colorPrimaryDark"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/view7"/>
+
+
+        </android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
