--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -75,6 +75,10 @@
         <item name="android:textColor">@color/textLightDark</item>
     </style>
 
+    <style name="TextAppearance.h2" parent="android:TextAppearance">
+        <item name="android:textSize">21sp</item>
+        <item name="android:textColor">@color/textLightDark</item>
+    </style>
 
 
     <!--Fonts-->
