--- a/app/src/main/res/layout/view_default_edit_text_container_view.xml
+++ b/app/src/main/res/layout/view_default_edit_text_container_view.xml
@@ -53,15 +53,14 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="8dp"
-        android:layout_height="8dp"
+        android:layout_width="6dp"
+        android:layout_height="6dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:tint="@color/colorLight"
         app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="@+id/contentEditText"
-        app:layout_constraintTop_toTopOf="@+id/contentEditText"/>
-        <!--app:srcCompat="@drawable/oval"-->
-
+        app:layout_constraintTop_toTopOf="@+id/contentEditText"
+        app:srcCompat="@drawable/oval"/>
 
 </android.support.constraint.ConstraintLayout>
