컬러 리네임 - 조심 컬러 추가 피쳐드 v3 구조

--- a/app/src/main/res/layout/card_menu.xml
+++ b/app/src/main/res/layout/card_menu.xml
@@ -29,7 +29,7 @@
                 android:paddingLeft="@dimen/menu_name_padding"
                 android:paddingRight="@dimen/menu_name_padding"
                 android:paddingTop="@dimen/menu_name_padding"
-                android:textColor="@color/textLightDark"
+                android:textColor="@color/textDark"
                 android:textSize="@dimen/album_title"
                 />
             <TextView
