--- a/app/src/main/res/layout/view_landing_page_section_item.xml
+++ b/app/src/main/res/layout/view_landing_page_section_item.xml
@@ -17,7 +17,7 @@
         android:maxLines="3"
         android:minLines="2"
         android:text="푸드트럭의 이름 설명 태그 연락처등을 입력합니다"
-        android:textColor="@color/textLightDark"
+        android:textColor="@color/textDark"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -27,12 +27,12 @@
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
-        android:layout_height="@color/textLightDark"
+        android:layout_height="@color/textDark"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="기본정보부터 시작하죠"
-        android:textColor="@color/textLightDark"
+        android:textColor="@color/textDark"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
