--- a/app/src/main/res/layout/activity_menu_editor_listing_page.xml
+++ b/app/src/main/res/layout/activity_menu_editor_listing_page.xml
@@ -16,7 +16,7 @@
         android:adjustViewBounds="true"
         android:background="#00000000"
         android:scaleType="fitXY"
-        android:tint="@color/colorLightDark"
+        android:tint="@color/colorDark"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_x"/>
@@ -72,7 +72,7 @@
             android:adjustViewBounds="true"
             android:background="#00000000"
             android:scaleType="fitXY"
-            android:tint="@color/colorLightDark"
+            android:tint="@color/colorDark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
