--- a/app/src/main/res/layout/activity_store_basic_forms.xml
+++ b/app/src/main/res/layout/activity_store_basic_forms.xml
@@ -47,7 +47,7 @@
                 android:adjustViewBounds="true"
                 android:background="#00000000"
                 android:scaleType="fitXY"
-                android:tint="@color/colorLightDark"
+                android:tint="@color/colorDark"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_x"/>
