--- a/app/src/main/res/layout/card_nearby_store.xml
+++ b/app/src/main/res/layout/card_nearby_store.xml
@@ -3,7 +3,6 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -41,7 +40,7 @@
             android:layout_marginTop="0dp"
             android:singleLine="true"
             android:text="StoreName"
-            android:textColor="@color/textLightDark"
+            android:textColor="@color/textDark"
             android:textSize="24sp"
             card_view:layout_constraintHorizontal_bias="0.0"
             card_view:layout_constraintLeft_toLeftOf="parent"
