--- a/app/src/main/res/layout/fragment_location_chooser.xml
+++ b/app/src/main/res/layout/fragment_location_chooser.xml
@@ -29,7 +29,7 @@
                 android:adjustViewBounds="true"
                 android:background="#00000000"
                 android:scaleType="fitXY"
-                android:tint="@color/colorLightDark"
+                android:tint="@color/colorDark"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_left_arrow"/>
@@ -44,7 +44,7 @@
                 android:lines="2"
                 android:maxLines="2"
                 android:text="좌표를\n설정해 주세요"
-                android:textColor="@color/textLightDark"
+                android:textColor="@color/textDark"
                 android:textSize="26sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
