--- a/app/src/main/res/layout/fragment_photo_queue_editor.xml
+++ b/app/src/main/res/layout/fragment_photo_queue_editor.xml
@@ -17,7 +17,6 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -32,7 +31,7 @@
         android:adjustViewBounds="true"
         android:background="#00000000"
         android:scaleType="fitXY"
-        android:tint="@color/colorLightDark"
+        android:tint="@color/colorDark"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_x" />
