--- a/app/src/main/res/layout/fragment_photo_queue_first.xml
+++ b/app/src/main/res/layout/fragment_photo_queue_first.xml
@@ -2,7 +2,6 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -16,7 +15,7 @@
         android:adjustViewBounds="true"
         android:background="#00000000"
         android:scaleType="fitXY"
-        android:tint="@color/colorLightDark"
+        android:tint="@color/colorDark"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_x"/>
