--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -72,13 +72,25 @@
     <style name="TextAppearance.Large" parent="android:TextAppearance">
         <item name="android:textSize">26sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/textLightDark</item>
+        <item name="android:textColor">@color/textDark</item>
     </style>
 
     <style name="TextAppearance.h2" parent="android:TextAppearance">
         <item name="android:textSize">21sp</item>
+        <item name="android:textColor">@color/textDark</item>
+    </style>
+
+
+    <style name="TextAppearance.TopicTitleStyle" parent="android:TextAppearance">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/textDark</item>
+    </style>
+
+    <style name="TextAppearance.TopicDescriptionStyle" parent="android:TextAppearance">
+        <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/textLightDark</item>
     </style>
+
 
 
     <!--Fonts-->
