MoreTab 추가 그래들 수정

--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -10,6 +10,10 @@
         <attr name="titleText"/>
         <attr name="hintText" format="string"/>
     </declare-styleable>
+    <declare-styleable name="OptionItemView">
+        <attr name="optionNameText" format="string"/>
+        <attr name="optionImage" format="reference|integer"/>
+    </declare-styleable>
 
 
 
