--- a/app/src/main/res/layout/fragment_featured_inside_view_v3.xml
+++ b/app/src/main/res/layout/fragment_featured_inside_view_v3.xml
@@ -15,6 +15,8 @@
             android:orientation="vertical"
             android:layout_marginStart="18dp"
             >
+
+
             <include
                 android:layout_marginTop="30dp"
                 android:id="@+id/view1"
@@ -28,11 +30,13 @@
                 android:id="@+id/view3"
                 layout="@layout/view_default_recycler_container_view"/>
 
-
             <me.gujun.android.taggroup.TagGroup
                 android:id="@+id/tag_group"
-                style="@style/TagGroup"
-                android:layout_marginTop="10dp" />
+                style="@style/TagGroup.Large"
+                atg_borderColor ="#ee5555"
+                atg_textColor="ee5555"
+                android:layout_marginTop="20dp" />
+
 
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
